force-app/main/default/objects/FD_Details__c/fields/Application_Form_No__c.field-meta.xml
<CustomField>
    <fullName>Application_Form_No__c</fullName>
    <description>Musterilerin doldurdugu formun numarasi</description>
    <label>Application Form No</label>
    <length>10</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>