force-app/main/default/objects/FD_Details__c/fields/FD_Amount__c.field-meta.xml
<CustomField>
    <fullName>FD_Amount__c</fullName>
    <label>FD Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>