force-app/main/default/objects/FD_Details__c/fields/Maturity_Amount__c.field-meta.xml
<CustomField>
    <fullName>Maturity_Amount__c</fullName>
    <formula>FD_Amount__c + (FD_Amount__c * Interest_Rate__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Maturity Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>