force-app/main/default/objects/FD_Details__c/fields/Payout_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Payout_Frequency__c</fullName>
    <description>Field Dependency olacak ( Cumulative seçilince Single, NC seçilince Monthly v ediğer
değerler seçilebilir olmalı</description>
    <label>Payout Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Deposit_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Single</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
            <value>
                <fullName>Half Yearly</fullName>
            </value>
            <value>
                <fullName>Annual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>