force-app/main/default/objects/FD_Details__c/fields/Relationship_Officer__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Officer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Relationship Officer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>FD_Details1</relationshipName>
    <type>Lookup</type>
</CustomField>