force-app/main/default/objects/FD_Details__c/fields/Tenor_in_days__c.field-meta.xml
<CustomField>
    <fullName>Tenor_in_days__c</fullName>
    <label>Tenor in days</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>