force-app/main/default/objects/FD_Details__c/fields/Tenor_in_months__c.field-meta.xml
<CustomField>
    <fullName>Tenor_in_months__c</fullName>
    <label>Tenor in months</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>