force-app/main/default/objects/FD_Details__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Relationship_Officer__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>